[metadata]
name = mojoqa
version = 1.0
author = RaigonAugustin
author_email = raigonkunnathaugustin@gmail.com
description = RAG-based LLM application to answer queries related to Mojo programming language
long_description = file: README.md
long_description_content_type = text/markdown
url = project_url.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = mojoqa